--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,8 @@
 #header_logo {
-  height: 80px;
-  width: auto;
+  height: 70px;
+  width: 280px;
   margin-top: -5px;
-  margin-left: -15px;
+  margin-left: -16px;
   visibility: inherit;
   opacity: 1.0;
 
@@ -11,8 +11,36 @@
 .navbar {
   background-color: rgba(255, 0, 0, 0.8);
   color: rgba(255, 255, 255, 0.8);
-  height: 40px;
+}
+
+.navbar > div > ul > li > a {
+  color: #fff;
+}
+
+
+.navbar > div > ul > li > a:hover {
+  color: #eee;
+}
+
+.menu {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 1.5em;
+    margin-top: -8px;
+}
+
+.menu_button{
+    background-color: #fff;
+    color: #f00;
+
+}
+
+.collapsed_navbar {
+  color: #fff;
+  margin-bottom: 80px;
   margin-top: 30px;
+  height: 40px;
+  flex-wrap: nowrap;
 }
 
 .top_social_icons {
@@ -20,26 +48,6 @@
   height: auto;
   margin-left: -20px;
   opacity: 1.0;
-
-}
-
-.menu {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 1.5em;
-}
-
-.navbar > div > ul > li > a {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-
-.navbar > div > ul > li > a:hover {
-  color: rgb(255, 255, 255);
-}
-
-.navbar-brand {
-  margin-right: 150px;
 }
 
 .form-inline > a {
